# absher-zt

./: Cargo.toml  README.md  index.html  package.json
src/: app.rs  main.ts  styles.css
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
