[package]
name = "absher-zt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "absher_zt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.5.2"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync", "fs"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
url = "2.5.7"
log = "0.4.29"
# force open-ssl to be vendored
# no longer needed rust-tls
# openssl-sys = { version = "0.9.111", features = ["vendored"] }

[dependencies.reqwest]
version = "0.12.25"
default-features = false
features = [
    "json",
    "charset",
    "http2",
    "system-proxy",
    "rustls-tls-webpki-roots"
]
